--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "rabin-b-tree",
   "version": "0.0.0",
   "description": "A functionally persistent ordered search index",
-  "main": "index.js",
   "dependencies": {
     "@types/node": "^14.14.2",
     "multiformats": "^4.2.1"
   },
   "devDependencies": {
     "node": "^15.0.1",
-    "typescript": "^4.0.3",
-    "ts-node": "^9.0.0"
+    "tape": "^5.0.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {},
   "author": "Mikola Lysenko",
